--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "size-plugin",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Tracks your Webpack asset sizes over time.",
   "main": "dist/size-plugin.js",
   "module": "src/index.mjs",
@@ -8,7 +8,8 @@
   "scripts": {
     "build": "microbundle -f cjs --target node --no-compress",
     "prepare": "npm run -s build",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "release": "npm t && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags && npm publish"
   },
   "files": [
     "src",
