--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "escape-string-regexp": "^1.0.5",
     "glob": "^7.1.2",
     "gzip-size": "^5.0.0",
+    "jsx": "^0.9.89",
     "minimatch": "^3.0.4",
     "pretty-bytes": "^5.1.0",
     "util.promisify": "^1.0.0"
