--- a/package.json
+++ b/package.json
@@ -59,7 +59,9 @@
     "webpack": "^4.29.6"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "chalk": "^2.4.1",
+    "ci-env": "^1.9.0",
     "escape-string-regexp": "^1.0.5",
     "glob": "^7.1.2",
     "gzip-size": "^5.0.0",
