--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
   },
   "dependencies": {
     "escape-string-regexp": "^1.0.5",
-    "size-plugin-core": "kuldeepkeshwar/size-plugin-core"
+    "size-plugin-core": "^0.0.3"
   },
   "peerDependencies": {
     "webpack": "*"
