--- a/package.json
+++ b/package.json
@@ -1,75 +1,10 @@
 {
-  "name": "size-plugin",
-  "version": "2.0.0",
-  "description": "Tracks your Webpack asset sizes over time.",
-  "main": "dist/size-plugin.js",
-  "module": "src/index.mjs",
-  "source": "src/index.mjs",
-  "scripts": {
-    "build": "microbundle -f cjs --target node --no-compress",
-    "doc": "documentation readme src/index.mjs -a public --section Options",
-    "prepare": "npm run -s build",
-    "test": "jest --coverage",
-    "release": "npm t && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags && npm publish"
-  },
-  "files": [
-    "src",
-    "dist"
-  ],
-  "keywords": [
-    "webpack plugin",
-    "file size",
-    "gzip size",
-    "bundle size"
-  ],
-  "eslintConfig": {
-    "extends": "developit"
-  },
-  "babel": {
-    "presets": [
-      "env"
-    ]
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "moduleFileExtensions": [
-      "mjs",
-      "js",
-      "json"
-    ],
-    "transform": {
-      "^.+\\.m?js$": "babel-jest"
+    "private": true,
+    "workspaces":["packages/*"],
+    "devDependencies": {
+      "documentation": "^12.1.1",
+      "lerna": "^3.16.4"
     },
-    "coverageReporters": [
-      "text"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*"
-    ],
-    "watchPathIgnorePatterns": [
-      "node_modules",
-      "dist"
-    ]
-  },
-  "author": "Jason Miller <developit@google.com>",
-  "license": "Apache-2.0",
-  "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-jest": "^23.6.0",
-    "babel-preset-env": "^1.7.0",
-    "documentation": "^12.1.1",
-    "eslint": "^5.16.0",
-    "eslint-config-developit": "^1.1.1",
-    "fs-extra": "^7.0.1",
-    "jest": "^23.6.0",
-    "microbundle": "^0.11.0",
-    "webpack": "^4.39.2"
-  },
-  "dependencies": {
-    "escape-string-regexp": "^1.0.5",
-    "size-plugin-core": "^0.0.7"
-  },
-  "peerDependencies": {
-    "webpack": "*"
-  }
+    "name": "size-plugin"
 }
+  
