add repository field to package.json

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "jest --coverage",
     "release": "npm t && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags && npm publish"
   },
+  "repository": "googlechromelabs/size-plugin",
   "files": [
     "src",
     "dist"
